feat: Ajout et stylisation des composants Banner, Card et PropertyList
- Corrections CSS mineures pour le composant Banner :
  - Ajout d'une marge inférieure de 50px pour espacement supplémentaire.
  - Ajout de text-shadow sur le texte de la bannière pour améliorer la lisibilité.
  - Application d'une superposition sombre avec 60% d'opacité pour renforcer la lisibilité du texte.
- Correction de la position du footer pour assurer une meilleure mise en page.
- Création du dossier Card dans components :
  - Ajout de Card.jsx pour gérer la création de cartes avec image et titre.
  - Ajout de Card.scss pour la stylisation des cartes, incluant text-shadow pour plus de visibilité du texte et une mise en page responsive.
- Création du dossier PropertyList dans components :
  - Implémentation d'un composant PropertyList pour générer dynamiquement la liste des logements disponibles à partir des données JSON.
  - Application d'un style de grille flexible avec flex-wrap et espacement uniforme pour aligner les cartes en rangées de trois.
- Ajout de l'appel du composant PropertyList dans HomePage pour afficher la liste des logements sur la page d'accueil.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -40,9 +40,9 @@ header {
     color: white;
     text-align: center;
     padding: 20px;
-    position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 50px;
   
     .footer-container {
       max-width: 1200px;
