--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,10 +8,13 @@
     max-width: 1240px;
     height: 223px;
     margin: 20px auto;
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+
 
     &::after {
         content: '';
@@ -30,5 +33,6 @@
       z-index: 2;
       font-size: 48px;
       font-weight: 700;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte
     }
   }
