feat: Ajout des media queries pour améliorer la réactivité sur mobile
- Ajout des media queries pour le header :
  - Ajustement de la taille de la police pour le menu de navigation sur les écrans mobiles.
  - Réduction de l'espacement entre les éléments de menu pour une meilleure adaptation sur les petits écrans.

- Ajout des media queries pour le footer :
  - Ajustement du padding et de la taille de la police pour assurer une meilleure lisibilité sur les petits écrans.

- Ajout des media queries pour la PropertyList :
  - Modification de la disposition des cards pour qu'elles s'affichent en colonne sur mobile.
  - Réduction de la hauteur et de la largeur des cards pour une meilleure adaptation sur les écrans de petite taille.

- Style mobile ajouté précédemment pour les components suivants :
  - Cards : Adaptation de la taille et de la disposition pour les petits écrans.
  - Banners : Ajustement de la hauteur et de la taille du texte pour les écrans mobiles.

--- a/src/components/PropertyList/PropertyList.scss
+++ b/src/components/PropertyList/PropertyList.scss
@@ -9,4 +9,12 @@
     background-color: #F6F6F6;
     border-radius: 25px;
     box-sizing: border-box;
+
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      background-color: white;
+      gap: 20px;
+      padding: 0;
+    }
   }
