--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -15,7 +15,6 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
 
-
     &::after {
         content: '';
         position: absolute;
@@ -35,4 +34,16 @@
       font-weight: 700;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte
     }
+
+    // Media query pour les écrans de 768px de largeur ou moins
+    @media (max-width: 768px) {
+      height: 111px; 
+      justify-content: flex-start;
+      padding-left: 20px;
+
+      h1 {
+          font-size: 24px;
+          text-align: left;
+      }
   }
+}
