--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -27,4 +27,9 @@
         padding: 5px 10px;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte  
       }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    height: 225px;
   }
+}
