feat: Ajout du design responsive pour le Header et le Slideshow
- Mise en place du design responsive pour le header dans le layout. Le logo ajuste désormais sa taille, et le menu de navigation se redimensionne correctement sur les écrans plus petits (max-width : 768px).
- Le composant Slideshow a été mis à jour pour être entièrement responsive. La hauteur, la taille des flèches et le conteneur d'image s'adaptent maintenant aux écrans plus petits, garantissant une expérience utilisateur cohérente et agréable sur tous les appareils.
- Ajout de media queries pour ajuster les marges, les tailles de police et l'alignement des éléments en vue mobile.

--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -1,7 +1,8 @@
 .slideshow-container {
     max-width: 1240px;
     margin: 0 auto; /* Centre le conteneur horizontalement */
-    padding: 20px;
+    padding-top: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -59,4 +60,36 @@
         font-size: 18px;
         background: transparent;
     }
-  }
+}
+
+@media (max-width: 768px) {
+
+    .slideshow-container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .slideshow {
+        height: 255px;
+
+        img {
+            border-radius: 10px;
+        }
+
+        .left-arrow, .right-arrow {
+            width: 15px;
+        }
+
+        .left-arrow {
+            left: 10px;
+        }
+        
+        .right-arrow {
+            right: 10px;
+        }
+    }
+
+    .slide-number {
+        display: none;
+    }
+
+}
