style: Amélioration du design responsive de la bannière
- Ajustement de la hauteur de la bannière à 111px en version mobile.
- Alignement du texte à gauche et réduction de la taille de la police à 24px.
- Suppression de l'ombre portée et ajustement des marges pour un meilleur rendu sur les petits écrans.
- Ajout de padding à gauche et recentrage vertical du texte dans la bannière.
- Ajustement des bordures de la bannière pour correspondre au design mobile.

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,7 +8,7 @@
     max-width: 1240px;
     height: 223px;
     margin: 20px auto;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,16 +34,26 @@
       font-weight: 700;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte
     }
+}
 
-    // Media query pour les écrans de 768px de largeur ou moins
-    @media (max-width: 768px) {
-      height: 111px; 
-      justify-content: flex-start;
-      padding-left: 20px;
 
-      h1 {
-          font-size: 24px;
-          text-align: left;
-      }
-  }
+@media (max-width: 768px) {
+  .banner {
+    height: 111px; 
+    justify-content: flex-start;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: none;
+    margin-bottom: 15px;
+    align-items: center;
+
+    &::after {
+        border-radius: 10px;
+    }
+
+    h1 {
+        font-size: 24px;
+        text-align: left;
+    }
+}
 }
