--- a/src/styles/FicheLogementPage.scss
+++ b/src/styles/FicheLogementPage.scss
@@ -1,8 +1,12 @@
 .fiche-logement-content {
     max-width: 1240px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0px;
     box-sizing: border-box;
+}
+
+.ranking-host-mobile {
+  display: none;
 }
 
 .title-host {
@@ -136,4 +140,115 @@
         color: #ff6060;
       }
     }
+}
+
+
+@media (max-width: 768px) {
+  .fiche-logement-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .title-host {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 10px;
+
+    .host {
+      display: none;
+    }
+
+    .title-location {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0px;
+  
+        h1 {
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 25.67px;
+        }
+  
+        .location {
+          font-size: 14px;
+          font-weight: 500;
+        }
+    }
+  }
+
+  .description-equipements {
+    flex-direction: column;
+    gap: 20px;
+
+    .collapse-container {
+      width: 100%;
+    }
+
+    .collapse-header h2 {
+      font-size: 13px;
+      font-weight: 700;
+    }
+
+    ul, p {
+      font-size: 12px;
+      line-height: 17.11px;
+    }
+  }
+
+  .tags-ranking {
+    flex-direction: column;
+    .tags {
+
+      .tag {
+        min-width: 84px;
+        font-size: 10px;
+      }
+    }
+
+    .rating {
+      display: none;
+    }
+  }
+
+  .ranking-host-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    .star {
+      width: 15px;
+      height: 15px;
+    }
+
+    .fa-star {
+      font-size: 18px;
+      color: #E3E3E3;
+    }
+
+    
+    .fa-star.active {
+      color: #ff6060;
+    }
+
+    .host-mobile {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      
+      .host-name-mobile {
+        font-size: 12px;
+        font-weight: 500;
+        color: #FF6060;
+        text-align: right;
+      }
+
+      .host-picture-mobile {
+        img {
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
