style: Améliorations et corrections de style pour diverses pages
- Footer : Modification de la largeur du bloc copyright pour un meilleur alignement avec le design.
- Card.scss : Correction de la hauteur des cartes en version mobile pour correspondre aux spécifications de la maquette.
- Banner.scss : Ajout de la propriété line-height pour ajuster l'espacement des lignes selon la maquette.
- about.scss : Correction de l'opacité du filtre noir sur la bannière spécifique à la page A Propos (réduction de 60% à 30%).
- error.scss : Ajout du responsive pour améliorer l'affichage de la page d'erreur sur mobile.

--- a/src/styles/error.scss
+++ b/src/styles/error.scss
@@ -5,27 +5,53 @@
     justify-content: center;
     text-align: center;
     color: #ff6060;
+    gap: 80px;
   
     h1 {
       font-size: 288px;
       margin: 0;
-      margin-top: 80px;
     }
   
     p {
       font-size: 36px;
       color: #ff6060;
-      margin: 80px 0;
     }
   
     a {
       font-size: 1rem;
       color: black;
       text-decoration: underline;
-      margin-top: 80px;
   
       &:hover {
         text-decoration: none;
       }
     }
+  }
+
+  @media (max-width: 768px) {
+
+    .error-page {
+      margin-top: 113px;
+      margin-bottom: 113px;
+      gap: 113px;
+
+      h1 {
+        font-size: 96px;
+        font-weight: 700;
+        line-height: 136.9px;
+      }
+  
+      p {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 25.67px;
+      }
+  
+      a {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 19.96px;
+      }
+    }
+
   }
