--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -33,6 +33,7 @@
       font-size: 48px;
       font-weight: 700;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte
+      line-height: 68.45px;
     }
 }
 
@@ -54,6 +55,7 @@
     h1 {
         font-size: 24px;
         text-align: left;
+        line-height: 24px;
     }
 }
 }
