--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,7 +1,7 @@
 .about-content {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
 
     ul, p {
         list-style-type: none;
@@ -13,6 +13,13 @@
 
     li {
         margin-bottom: 1px;
+    }
+}
+
+.banner {
+
+    &::after {
+        background-color: rgba(0, 0, 0, 0.30);
     }
 }
 
