--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -13,18 +13,26 @@
       justify-content: space-between;
       align-items: center;
       background-color: #ff6060;
-      padding: 10px 20px;
+      padding: 0px 10px;
       cursor: pointer;
       color: white;
       border-radius: 5px;
+      height: 54px;
   
       h2 {
         margin: 0;
         font-size: 24px;
+        font-weight: 700;
+        line-height: 34.22px;
       }
   
       .collapse-arrow {
         transition: transform 0.3s ease;
+        font-size: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 10px;
       }
   
       .collapse-arrow.open {
