style: Ajout d'une animation fadeIn pour une transition plus fluide des pages et mise à jour des effets hover sur les cartes
- Remplacement de l'animation scaleUp par une animation fadeIn pour une transition douce et visuelle lors du changement de page.
- Mise à jour des styles dans main.scss pour intégrer la nouvelle animation fadeIn.
- Modification des effets hover sur les cartes dans Card.scss pour un effet de shadow plus prononcé.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,15 +11,21 @@ main {
     padding-right: 20px;
 }
 
-@keyframes scaleUp {
-  from {
-    transform: scale(0.8);
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: scale(1);
+
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
-.scale-up {
-  animation: scaleUp 0.3s ease-in-out;
+.fade-in {
+  animation: fadeIn 0.3s ease-in-out;
 }
