--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -35,6 +35,10 @@
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte
       line-height: 68.45px;
     }
+
+    .mobile-br {
+        display: none;
+    }
 }
 
 
@@ -56,6 +60,10 @@
         font-size: 24px;
         text-align: left;
         line-height: 24px;
+
+        .mobile-br {
+            display: inline;
+          }
     }
 }
 }
