style : Ajustements UI pour correspondre à la maquette
- Modification de la largeur maximale des collapses pour un alignement optimal avec la maquette.
- Ajout d'un br-mobile sur la page d'erreur pour ajuster le texte en version mobile.
- Modifications des marges sur plusieurs éléments pour correspondre précisément aux spécifications de la maquette.'

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -50,6 +50,7 @@
     border-radius: 10px;
     box-shadow: none;
     margin-bottom: 15px;
+    margin-top: 0;
     align-items: center;
 
     &::after {
