--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -12,6 +12,16 @@
       transform: scale(1.05);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  }
   
     .card-image {
       width: 100%;
@@ -28,6 +38,7 @@
         font-weight: 700;
         padding: 5px 10px;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Ombre portée sur le texte  
+        z-index: 2; 
       }
 }
 
